safety after refactor